# internal/domain/entities/match.go
@@ -9,9 +9,10 @@ import (
 )
 
 type Match struct {
-	ID        uuid.UUID `json:"id" db:"id"`
-	User1ID   uuid.UUID `json:"user1_id" db:"user1_id"`
-	User2ID   uuid.UUID `json:"user2_id" db:"user2_id"`
-	IsActive  bool      `json:"is_active" db:"is_active"`
-	MatchedAt time.Time `json:"matched_at" db:"matched_at"`
+	ID        uuid.UUID  `json:"id" db:"id"`
+	User1ID   uuid.UUID  `json:"user1_id" db:"user1_id"`
+	User2ID   uuid.UUID  `json:"user2_id" db:"user2_id"`
+	IsActive  bool       `json:"is_active" db:"is_active"`
+	MatchedAt time.Time  `json:"matched_at" db:"matched_at"`
+	ExpiresAt *time.Time `json:"expires_at" db:"expires_at"` // NULL если кто-то написал сообщение (матч активен навсегда)
 }
